add .gitignore file to project

--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
         </div>
     </div>
 
-    <div id="text-interaction-area" class="container section">
-        <div id="textContainer"></div>
-        <div class="button-container">
-            <button id="ignore-word">Ignore Word</button>
-            <button id="known-word">I know this word</button>
-            <button id="marked-word">MARK THIS WORD!</button>
+    <div id="text-interaction-area" class="section">
+        <div class="container">
+            <div id="textContainer" ></div>
+            <div class="button-container">
+                <button id="ignore-word">Ignore Word</button>
+                <button id="known-word">I know this word</button>
+                <button id="marked-word">MARK THIS WORD!</button>
+            </div>
+            <div class="button-container">
+                <button id="marked-words-as-known">Mark all blue words as known</button>
+            </div>
         </div>
-        <div class="button-container">
-            <button id="marked-words-as-known">Mark all blue words as known</button>
-        </div>
-    </div>
-    <div id="sign-out-container"></div>
+    <div id="sign-out-container" class="sign-out-container"></div>
     <script src="main.js"></script>
 </body>
 </html>
